update sabtu pagi 2

--- a/works.html
+++ b/works.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works • Kancah</title>
+     <link rel="icon" type="image/png" href="./assets/logowh.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
@@ -98,7 +99,7 @@
     <div class="flex flex-col items-center gap-8 text-2xl font-black uppercase tracking-widest text-kancah-dark">
         <a href="about.html" class="mobile-link">Agency</a>
         <a href="services.html" class="mobile-link">Capabilities</a>
-        <a href="works.html" class="mobile-link text-kancah-blue">Work</a>
+        <a href="works" class="mobile-link text-kancah-blue">Work</a>
         <a href="careers.html" class="mobile-link">Careers</a>
         <a href="contact.html" class="mobile-link px-8 py-3 bg-kancah-blue text-white rounded-full text-sm">Talk</a>
     </div>
