update khusus works

--- a/works.html
+++ b/works.html
@@ -41,12 +41,12 @@
             </a>
         </div>
 
-        <div class="hidden lg:flex gap-6 xl:gap-8 text-[11px] font-bold uppercase tracking-[0.2em] text-[#111111]">
-            <a href="about.html" class="hover:text-[#0006ff] transition-colors">Agency</a>
-            <a href="services.html" class="hover:text-[#0006ff] transition-colors">Capabilities</a>
-            <a href="works.html" class="hover:text-[#0006ff] font-black text-kancah-blue transition-colors">Work</a>
-            <a href="careers.html" class="hover:text-[#0006ff] transition-colors">Careers</a>
-        </div>
+       <div class="hidden lg:flex gap-6 xl:gap-8 text-[11px] font-bold uppercase tracking-[0.2em] text-[#111111]">
+    <a href="about" class="hover:text-[#0006ff] transition-colors">Agency</a>
+    <a href="services" class="hover:text-[#0006ff] transition-colors">Capabilities</a>
+    <a href="works" class="hover:text-[#0006ff] font-black text-kancah-blue transition-colors">Work</a>
+    <a href="careers" class="hover:text-[#0006ff] transition-colors">Careers</a>
+</div>
 
         <div class="flex items-center gap-2 sm:gap-4 h-8"> 
             
