update index remove .

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="max-w-[1440px] mx-auto px-4 sm:px-6 h-full flex justify-between items-center relative">
         
         <div class="flex-none">
-            <a href="index">
+            <a href="/">
                 <img src="assets/kancah-logo.png" alt="Kancah Logo" class="h-6 sm:h-9 w-auto object-contain">
             </a>
         </div>
