--- a/contact.html
+++ b/contact.html
@@ -100,11 +100,11 @@
             <i class="fa-solid fa-xmark"></i>
         </button>
         <div class="flex flex-col items-center gap-8 text-2xl font-black uppercase tracking-widest text-kancah-dark">
-            <a href="about.html" class="mobile-link hover:text-kancah-blue transition-colors">Agency</a>
-            <a href="services.html" class="mobile-link hover:text-kancah-blue transition-colors">Capabilities</a>
-            <a href="works.html" class="mobile-link hover:text-kancah-blue transition-colors">Work</a>
-            <a href="careers.html" class="mobile-link hover:text-kancah-blue transition-colors">Careers</a>
-            <a href="contact.html" class="mobile-link px-8 py-3 bg-kancah-blue text-white rounded-full text-sm">Talk to us</a>
+            <a href="about" class="mobile-link hover:text-kancah-blue transition-colors">Agency</a>
+            <a href="services" class="mobile-link hover:text-kancah-blue transition-colors">Capabilities</a>
+            <a href="works" class="mobile-link hover:text-kancah-blue transition-colors">Work</a>
+            <a href="careers" class="mobile-link hover:text-kancah-blue transition-colors">Careers</a>
+            <a href="contact" class="mobile-link px-8 py-3 bg-kancah-blue text-white rounded-full text-sm">Talk to us</a>
         </div>
     </div>
 
@@ -215,7 +215,7 @@
                     <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold tracking-tighter leading-[0.9] text-white mb-8">
                         PUNYA IDE? <br> <span class="text-kancah-blue italic">OBROLIN AJA.</span>
                     </h2>
-                    <a href="contact.html" class="group inline-flex items-center justify-center gap-3 bg-white text-kancah-dark px-8 py-4 rounded-full font-bold uppercase tracking-widest text-xs hover:bg-kancah-blue hover:text-white transition-all duration-300 hover:shadow-[0_0_20px_rgba(0,6,255,0.3)] hover:-translate-y-1">
+                    <a href="contact" class="group inline-flex items-center justify-center gap-3 bg-white text-kancah-dark px-8 py-4 rounded-full font-bold uppercase tracking-widest text-xs hover:bg-kancah-blue hover:text-white transition-all duration-300 hover:shadow-[0_0_20px_rgba(0,6,255,0.3)] hover:-translate-y-1">
                         Ayo Diskusi
                         <i class="fa-solid fa-arrow-right -rotate-45 group-hover:rotate-0 transition-transform duration-300"></i>
                     </a>
@@ -240,10 +240,10 @@
                     <div class="flex flex-col gap-4">
                         <h4 class="text-[10px] font-bold text-gray-500 uppercase tracking-widest">Menu</h4>
                         <ul class="flex flex-col gap-3 font-medium text-sm">
-                            <li><a href="services.html" class="text-white hover:text-kancah-blue transition-colors">Services</a></li>
-                            <li><a href="works.html" class="text-white hover:text-kancah-blue transition-colors">Work</a></li>
-                            <li><a href="about.html" class="text-white hover:text-kancah-blue transition-colors">About</a></li>
-                            <li><a href="careers.html" class="text-white hover:text-kancah-blue transition-colors">Careers</a></li>
+                            <li><a href="services" class="text-white hover:text-kancah-blue transition-colors">Services</a></li>
+                            <li><a href="works" class="text-white hover:text-kancah-blue transition-colors">Work</a></li>
+                            <li><a href="about" class="text-white hover:text-kancah-blue transition-colors">About</a></li>
+                            <li><a href="careers" class="text-white hover:text-kancah-blue transition-colors">Careers</a></li>
                         </ul>
                     </div>
                     <div class="flex flex-col gap-4">
