--- a/works.html
+++ b/works.html
@@ -214,7 +214,7 @@
 
         grid.innerHTML = projects.map(p => `
             <div class="work-item group cursor-pointer" onclick="window.location.href='detail-project?id=${p.slug}'">
-                <div class="relative overflow-hidden rounded-[2.5rem] aspect-[4/3] mb-8 shadow-sm group-hover:shadow-2xl transition-all duration-700 group-hover:-translate-y-3 border border-gray-100">
+                <div class="relative overflow-hidden rounded-[2.5rem] aspect-video mb-8 shadow-sm group-hover:shadow-2xl transition-all duration-700 group-hover:-translate-y-3 border border-gray-100">
                     <img src="${p.image_url}" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-1000 ease-out">
                     <div class="absolute inset-0 bg-black/5 group-hover:bg-transparent transition-colors"></div>
                     <div class="absolute top-8 left-8">
