--- a/detail-project.html
+++ b/detail-project.html
@@ -33,16 +33,16 @@
     <nav class="fixed w-full z-[100] top-0 bg-white/80 backdrop-blur-xl border-b border-gray-100 h-16 sm:h-20 transition-all duration-300">
         <div class="max-w-[1440px] mx-auto px-4 sm:px-6 h-full flex justify-between items-center relative">
             <div class="flex-none">
-                <a href="index.html">
+                <a href="index">
                     <img src="assets/kancah-logo.png" alt="Kancah Logo" class="h-6 sm:h-9 w-auto object-contain">
                 </a>
             </div>
 
             <div class="hidden lg:flex gap-6 xl:gap-8 text-[11px] font-bold uppercase tracking-[0.2em] text-[#111111]">
-                <a href="about.html" class="hover:text-kancah-blue transition-colors">Agency</a>
-                <a href="services.html" class="hover:text-kancah-blue transition-colors">Capabilities</a>
-                <a href="works.html" class="text-kancah-blue font-black transition-colors  decoration-2">Work</a>
-                <a href="careers.html" class="hover:text-kancah-blue transition-colors">Careers</a>
+                <a href="about" class="hover:text-kancah-blue transition-colors">Agency</a>
+                <a href="services" class="hover:text-kancah-blue transition-colors">Capabilities</a>
+                <a href="works" class="text-kancah-blue font-black transition-colors  decoration-2">Work</a>
+                <a href="careers" class="hover:text-kancah-blue transition-colors">Careers</a>
             </div>
 
             <div class="flex items-center gap-2 sm:gap-4 h-8"> 
@@ -70,7 +70,7 @@
                     </div>
                 </div>
 
-                <a href="contact.html" class="hidden sm:flex items-center justify-center h-[52px] px-8 bg-kancah-blue text-white text-[12px] font-black uppercase tracking-[0.2em] rounded-full hover:bg-kancah-dark transition-all">
+                <a href="contact" class="hidden sm:flex items-center justify-center h-[52px] px-8 bg-kancah-blue text-white text-[12px] font-black uppercase tracking-[0.2em] rounded-full hover:bg-kancah-dark transition-all">
                     Talk <i class="fa-solid fa-arrow-right -rotate-45 ml-2 text-[10px]"></i>
                 </a>
 
@@ -84,18 +84,18 @@
     <div id="mobile-menu" class="fixed inset-0 bg-white z-[150] flex flex-col justify-center items-center gap-8 translate-x-full lg:hidden">
         <button class="absolute top-6 right-6 text-3xl" id="close-menu"><i class="fa-solid fa-xmark"></i></button>
         <div class="flex flex-col items-center gap-8 text-2xl font-black uppercase tracking-widest text-kancah-dark">
-            <a href="about.html" class="mobile-link">Agency</a>
-            <a href="services.html" class="mobile-link">Capabilities</a>
-            <a href="works.html" class="mobile-link text-kancah-blue font-black">Work</a>
-            <a href="careers.html" class="mobile-link">Careers</a>
-            <a href="contact.html" class="mobile-link px-8 py-3 bg-kancah-blue text-white rounded-full text-sm">Talk to us</a>
+            <a href="about" class="mobile-link">Agency</a>
+            <a href="services" class="mobile-link">Capabilities</a>
+            <a href="works" class="mobile-link text-kancah-blue font-black">Work</a>
+            <a href="careers" class="mobile-link">Careers</a>
+            <a href="contact" class="mobile-link px-8 py-3 bg-kancah-blue text-white rounded-full text-sm">Talk to us</a>
         </div>
     </div>
 
     <main class="pt-24 sm:pt-32 pb-16 px-6 max-w-[1600px] mx-auto min-h-screen flex flex-col justify-center">
         <div id="project-container" class="opacity-0 transition-opacity duration-700">
             <div class="mb-8 lg:hidden">
-                <a href="works.html" class="inline-flex items-center gap-3 font-bold uppercase text-[10px] tracking-widest hover:text-kancah-blue transition-all group">
+                <a href="works" class="inline-flex items-center gap-3 font-bold uppercase text-[10px] tracking-widest hover:text-kancah-blue transition-all group">
                     <span class="w-8 h-8 rounded-full border border-gray-200 flex items-center justify-center group-hover:border-kancah-blue transition-all">←</span>
                     Back to Works
                 </a>
@@ -118,7 +118,7 @@
                         <div><h4 class="text-[9px] font-bold text-kancah-blue uppercase tracking-widest mb-2 italic">Outcome</h4><p id="p-outcome" class="text-sm text-gray-600 leading-relaxed font-light">--</p></div>
                     </div>
                     <div class="pt-6 hidden lg:block">
-                        <a href="works.html" class="inline-flex items-center gap-3 font-bold uppercase text-[10px] tracking-widest hover:text-kancah-blue transition-all group">
+                        <a href="works" class="inline-flex items-center gap-3 font-bold uppercase text-[10px] tracking-widest hover:text-kancah-blue transition-all group">
                             <span class="w-8 h-8 rounded-full border border-gray-200 flex items-center justify-center group-hover:border-kancah-blue transition-all">←</span>
                             Back to Works
                         </a>
@@ -208,7 +208,7 @@
         async function getProjectDetail() {
             const urlParams = new URLSearchParams(window.location.search);
             const slug = urlParams.get('id');
-            if (!slug) { window.location.href = 'works.html'; return; }
+            if (!slug) { window.location.href = 'works'; return; }
             const { data: project, error } = await kancah.from('projects').select('*').eq('slug', slug).single();
             if (error || !project) { console.error("Gagal ambil data:", error); return; }
             document.getElementById('page-title').innerText = `${project.title} • Kancah`;
