update selasa sore 2

--- a/detail-careers.html
+++ b/detail-careers.html
@@ -36,7 +36,7 @@
     
     <nav class="fixed w-full z-[100] top-0 bg-white/80 backdrop-blur-xl border-b border-gray-100 h-16 sm:h-20 transition-all duration-300">
         <div class="max-w-[1440px] mx-auto px-4 sm:px-6 h-full flex justify-between items-center relative">
-            <a href="index"><img src="assets/kancah-logo.png" alt="Kancah Logo" class="h-6 sm:h-9 w-auto object-contain"></a>
+            <a href="/"><img src="assets/kancah-logo.png" alt="Kancah Logo" class="h-6 sm:h-9 w-auto object-contain"></a>
             <div class="hidden lg:flex gap-6 xl:gap-8 text-[11px] font-bold uppercase tracking-[0.2em] text-[#111111]">
                 <a href="about" class="hover:text-kancah-blue transition-colors">Agency</a>
                 <a href="services" class="hover:text-kancah-blue transition-colors">Capabilities</a>
