--- a/detail-project.html
+++ b/detail-project.html
@@ -33,7 +33,7 @@
     <nav class="fixed w-full z-[100] top-0 bg-white/80 backdrop-blur-xl border-b border-gray-100 h-16 sm:h-20 transition-all duration-300">
         <div class="max-w-[1440px] mx-auto px-4 sm:px-6 h-full flex justify-between items-center relative">
             <div class="flex-none">
-                <a href="index">
+                <a href="/">
                     <img src="assets/kancah-logo.png" alt="Kancah Logo" class="h-6 sm:h-9 w-auto object-contain">
                 </a>
             </div>
