update selasa sore 3

--- a/index.html
+++ b/index.html
@@ -358,59 +358,69 @@
                 <h2 class="text-3xl sm:text-5xl font-bold mt-2">PERTANYAAN STRATEGIS.</h2>
             </div>
 
-            <div class="divide-y divide-gray-100 border-t border-b border-gray-100">
+           <div class="divide-y divide-gray-100 border-t border-b border-gray-100">
                 
-                <details class="group cursor-pointer">
-                    <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
-                        <span>"Yakin investasi branding ini bakal balik modal (ROI)?"</span>
-                        <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
-                    </summary>
-                    <div class="pb-6 text-gray-600 leading-relaxed font-light">
-                        Branding itu marathon, bukan sprint, Bestie. Kita nggak cuma bikin logo bagus, tapi bangun aset masa depan. Dengan strategi yang tepat, *value* produkmu naik, *trust* pelanggan kebangun, dan ROI bakal ngikutin secara organik.
-                    </div>
-                </details>
+    <details class="group cursor-pointer">
+        <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
+            <span>"Gimana caranya kalau mau mulai kerjasama dengan Kancah?"</span>
+            <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
+        </summary>
+        <div class="pb-6 text-gray-600 leading-relaxed font-light">
+            Caranya simpel banget. Kamu bisa mulai dengan klik tombol <strong>"Talk"</strong> di pojok kanan atas atau langsung sapa kami via WhatsApp. Kita bakal mulai dari sesi diskusi santai (curhat tentang brand kamu). 
+        </div>
+    </details>
 
-                <details class="group cursor-pointer">
-                    <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
-                        <span>"Kalian cuma eksekutor visual atau ikut mikir strategi?"</span>
-                        <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
-                    </summary>
-                    <div class="pb-6 text-gray-600 leading-relaxed font-light">
-                        Kita ini <strong>Thinking Partner</strong> kamu. Visual itu cuma ujungnya, akarnya ada di strategi bisnis. Sebelum buka laptop buat desain, kita bakal "kepoin" (riset) dulu pasar dan kompetitormu biar hasilnya nggak cuma estetik, tapi juga solutif.
-                    </div>
-                </details>
+    <details class="group cursor-pointer">
+        <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
+            <span>"Apa sih yang jadi spesialisasi atau keunggulan utama Kancah?"</span>
+            <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
+        </summary>
+        <div class="pb-6 text-gray-600 leading-relaxed font-light">
+            Spesialisasi kami memang di bidang Desain Grafis. Tetapi, kami juga bisa melayani service lain, mulai dari Brand Design (Identity System), Web Development (UI/UX & SEO), Social Media Management, hingga produksi Audio Visual (Video & Motion Graphics). Keunggulan kami adalah menjadi <strong>Thinking Partner</strong>. Kami nggak langsung buka laptop buat desain; kami riset dulu pasarnya, bedah kompetitor, dan cari solusi strategisnya biar hasilnya nggak cuma estetik, tapi beneran berdampak buat bisnis kamu.
+        </div>
+    </details>
 
-                <details class="group cursor-pointer">
-                    <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
-                        <span>"Kalau di tengah jalan visi kita nggak sejalan, gimana?"</span>
-                        <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
-                    </summary>
-                    <div class="pb-6 text-gray-600 leading-relaxed font-light">
-                        Makanya di Kancah ada fase 'PDKT' (Deep Briefing & Workshop) yang dalem banget di awal. Kita samain frekuensi dulu sampai klik. Kalaupun ada beda pandangan, kita diskusiin santai sambil ngopi sampai ketemu <em>win-win solution</em>.
-                    </div>
-                </details>
+    <details class="group cursor-pointer">
+        <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
+            <span>"Kalian menerima brand skala B2B atau B2C saja?"</span>
+            <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
+        </summary>
+        <div class="pb-6 text-gray-600 leading-relaxed font-light">
+            Kami sikat keduanya!, buat kami yang penting adalah <strong>Visi</strong>. Selama kamu punya mimpi besar dan berani eksekusi ide yang "nggak mungkin", Kancah siap jadi partner andalanmu. Kami sudah berpengalaman menangani klien korporasi besar hingga proyek kreatif personal.
+        </div>
+    </details>
 
-                <details class="group cursor-pointer">
-                    <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
-                        <span>"Project kelar, kita ditinggal gitu aja?"</span>
-                        <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
-                    </summary>
-                    <div class="pb-6 text-gray-600 leading-relaxed font-light">
-                        Prinsip kita kan <strong>Saklawase</strong> (Selamanya). Meskipun kontrak project udah beres, kita tetap siap jadi *brand guardian* kamu. Butuh saran dadakan atau *maintenance*? Kontak aja, kita nggak bakal *ghosting*.
-                    </div>
-                </details>
+    <details class="group cursor-pointer">
+        <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
+            <span>"Service apa saja yang sebenarnya Kancah tawarkan?"</span>
+            <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
+        </summary>
+        <div class="pb-6 text-gray-600 leading-relaxed font-light">
+            Senjata kami lengkap untuk bantu dominasi pasar kamu: mulai dari <strong>Brand Design</strong> (Identity System), <strong>Web Development</strong> (UI/UX & SEO), <strong>Social Media Management</strong>, hingga produksi <strong>Audio Visual</strong> (Video & Motion Graphics). Intinya, kami urus semua kebutuhan digital brand kamu.
+        </div>
+    </details>
 
-                <details class="group cursor-pointer">
-                    <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
-                        <span>"Tertarik kolaborasi atau gabung tim Kancah, bisa?"</span>
-                        <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
-                    </summary>
-                    <div class="pb-6 text-gray-600 leading-relaxed font-light">
-                        Pintu kita selalu terbuka lebar! Kalau kamu talenta gila atau brand yang mau kolaborasi epik, langsung aja meluncur ke halaman <a href="careers" class="text-kancah-blue font-bold hover:underline">Careers</a> atau sapa kita di email. Mari berkarya bareng!
-                    </div>
-                </details>
+    <details class="group cursor-pointer">
+        <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
+            <span>"Apa yang bikin Kancah beda dibanding agensi lain di luar sana?"</span>
+            <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
+        </summary>
+        <div class="pb-6 text-gray-600 leading-relaxed font-light">
+            Prinsip kami adalah <strong>Saklawase</strong> (Selamanya). Kami nggak mau cuma selesai project terus <em>ghosting</em>. Kami memposisikan diri sebagai <em>brand guardian</em> kamu—teman debat yang jujur dan partner mikir yang siap dampingi pertumbuhan bisnis kamu dalam jangka panjang.
+        </div>
+    </details>
 
-            </div>
+    <details class="group cursor-pointer">
+        <summary class="flex justify-between items-center font-bold text-lg py-5 select-none hover:text-kancah-blue transition-colors">
+            <span>"Saya tertarik, tapi boleh lihat dulu hasil kerja atau portfolio Kancah?"</span>
+            <span class="text-kancah-blue transition-transform group-open:rotate-180"><i class="fa-solid fa-chevron-down"></i></span>
+        </summary>
+        <div class="pb-6 text-gray-600 leading-relaxed font-light">
+            Tentu saja! Kamu bisa langsung meluncur ke halaman <a href="works" class="text-kancah-blue font-bold hover:underline">Works</a> untuk melihat karya-karya pilihan kami, silahkan menikmati karya karya kami.
+        </div>
+    </details>
+
+</div>
         </div>
     </section>
 
