--- a/works.html
+++ b/works.html
@@ -103,24 +103,24 @@
     </div>
 </div>
 
-<main class="pt-32 pb-24 px-6 max-w-[1440px] mx-auto min-h-screen">
-    <div class="mb-16">
-        <span class="text-kancah-blue font-bold text-xs uppercase tracking-[0.3em] block mb-4">Portfolio 2024—2026</span>
-        <h1 class="text-6xl sm:text-8xl md:text-9xl font-bold tracking-tighter leading-[0.8] text-kancah-dark uppercase">SELECTED <br> <span class="text-kancah-blue italic">WORKS.</span></h1>
+<main class="pt-28 pb-12 px-6 max-w-[1440px] mx-auto min-h-screen">
+    <div class="mb-6">
+        <span class="text-kancah-blue font-bold text-[10px] uppercase tracking-[0.3em] block mb-2">Portfolio 2024—2026</span>
+        <h1 class="text-6xl sm:text-8xl md:text-9xl font-black tracking-tighter leading-[0.8] text-kancah-dark uppercase">SELECTED <br> <span class="text-kancah-blue italic">WORKS.</span></h1>
         
-        <div class="mt-12 flex flex-wrap gap-2 sm:gap-3" id="filterContainer">
-            <button onclick="fetchAllWorks('all')" class="filter-btn active px-6 py-2.5 rounded-full border border-kancah-blue bg-kancah-blue text-white text-[10px] font-bold uppercase transition-all shadow-lg shadow-kancah-blue/20" data-filter="all">All</button>
-            <button onclick="fetchAllWorks('Brand Design')" class="filter-btn px-6 py-2.5 rounded-full border border-gray-200 bg-white text-gray-500 text-[10px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Brand Design">Brand</button>
-            <button onclick="fetchAllWorks('Stationery Design')" class="filter-btn px-6 py-2.5 rounded-full border border-gray-200 bg-white text-gray-500 text-[10px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Stationery Design">Stationery</button>
-            <button onclick="fetchAllWorks('Collateral Design')" class="filter-btn px-6 py-2.5 rounded-full border border-gray-200 bg-white text-gray-500 text-[10px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Collateral Design">Collateral</button>
-            <button onclick="fetchAllWorks('Promotion Design')" class="filter-btn px-6 py-2.5 rounded-full border border-gray-200 bg-white text-gray-500 text-[10px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Promotion Design">Promotion</button>
-            <button onclick="fetchAllWorks('Web Development')" class="filter-btn px-6 py-2.5 rounded-full border border-gray-200 bg-white text-gray-500 text-[10px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Web Development">Web</button>
-            <button onclick="fetchAllWorks('Social Media Management')" class="filter-btn px-6 py-2.5 rounded-full border border-gray-200 bg-white text-gray-500 text-[10px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Social Media Management">Medsos</button>
-            <button onclick="fetchAllWorks('Audio Visual')" class="filter-btn px-6 py-2.5 rounded-full border border-gray-200 bg-white text-gray-500 text-[10px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Audio Visual">AV</button>
+        <div class="mt-8 flex flex-wrap gap-2 sm:gap-3" id="filterContainer">
+            <button onclick="fetchAllWorks('all')" class="filter-btn active px-5 py-2 rounded-full border border-kancah-blue bg-kancah-blue text-white text-[9px] font-bold uppercase transition-all shadow-lg shadow-kancah-blue/20" data-filter="all">All</button>
+            <button onclick="fetchAllWorks('Brand Design')" class="filter-btn px-5 py-2 rounded-full border border-gray-200 bg-white text-gray-500 text-[9px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Brand Design">Brand</button>
+            <button onclick="fetchAllWorks('Stationery Design')" class="filter-btn px-5 py-2 rounded-full border border-gray-200 bg-white text-gray-500 text-[9px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Stationery Design">Stationery</button>
+            <button onclick="fetchAllWorks('Collateral Design')" class="filter-btn px-5 py-2 rounded-full border border-gray-200 bg-white text-gray-500 text-[9px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Collateral Design">Collateral</button>
+            <button onclick="fetchAllWorks('Promotion Design')" class="filter-btn px-5 py-2 rounded-full border border-gray-200 bg-white text-gray-500 text-[9px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Promotion Design">Promotion</button>
+            <button onclick="fetchAllWorks('Web Development')" class="filter-btn px-5 py-2 rounded-full border border-gray-200 bg-white text-gray-500 text-[9px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Web Development">Web</button>
+            <button onclick="fetchAllWorks('Social Media Management')" class="filter-btn px-5 py-2 rounded-full border border-gray-200 bg-white text-gray-500 text-[9px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Social Media Management">Medsos</button>
+            <button onclick="fetchAllWorks('Audio Visual')" class="filter-btn px-5 py-2 rounded-full border border-gray-200 bg-white text-gray-500 text-[9px] font-bold uppercase transition-all hover:border-kancah-blue hover:text-kancah-blue" data-filter="Audio Visual">AV</button>
         </div>
     </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-x-12 gap-y-20 lg:gap-y-32 mb-24" id="worksGrid">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-x-12 gap-y-12 lg:gap-y-16 mb-6" id="worksGrid">
         <div class="col-span-full py-20 text-center text-gray-300 uppercase tracking-[0.3em] font-bold animate-pulse text-xs">Curating Masterpieces...</div>
     </div>
 </main>
@@ -212,28 +212,28 @@
         const { data: projects, error } = await query;
         if (error) { grid.innerHTML = `<p class="text-red-500">Error loading data.</p>`; return; }
 
-        grid.innerHTML = projects.map(p => `
-            <div class="work-item group cursor-pointer" onclick="window.location.href='detail-project?id=${p.slug}'">
-                <div class="relative overflow-hidden rounded-[2.5rem] aspect-video mb-8 shadow-sm group-hover:shadow-2xl transition-all duration-700 group-hover:-translate-y-3 border border-gray-100">
-                    <img src="${p.image_url}" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-1000 ease-out">
-                    <div class="absolute inset-0 bg-black/5 group-hover:bg-transparent transition-colors"></div>
-                    <div class="absolute top-8 left-8">
-                        <span class="bg-white/95 backdrop-blur-md px-4 py-2 rounded-full text-[9px] font-black uppercase tracking-widest text-kancah-dark shadow-sm">
-                            ${p.category}
-                        </span>
-                    </div>
-                </div>
-                <div class="flex justify-between items-start border-b border-gray-100 pb-8 group-hover:border-kancah-blue transition-colors">
-                    <div>
-                        <h3 class="text-4xl sm:text-5xl font-bold mb-2 group-hover:text-kancah-blue transition-colors uppercase tracking-tighter leading-none italic">${p.title}</h3>
-                        <p class="text-gray-400 font-bold text-[9px] uppercase tracking-[0.3em]">${p.category}</p>
-                    </div>
-                    <div class="w-14 h-14 sm:w-16 sm:h-16 rounded-full border border-gray-200 flex items-center justify-center group-hover:bg-kancah-blue group-hover:text-white group-hover:border-kancah-blue transition-all duration-500 shrink-0 transform group-hover:rotate-45">
-                        <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i>
-                    </div>
-                </div>
+      grid.innerHTML = projects.map(p => `
+    <div class="work-item group cursor-pointer" onclick="window.location.href='detail-project?id=${p.slug}'">
+        <div class="relative overflow-hidden rounded-[2.5rem] aspect-video mb-6 shadow-sm group-hover:shadow-2xl transition-all duration-700 group-hover:-translate-y-2 border border-gray-100">
+            <img src="${p.image_url}" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-1000 ease-out">
+            <div class="absolute inset-0 bg-black/5 group-hover:bg-transparent transition-colors"></div>
+            <div class="absolute top-6 left-6">
+                <span class="bg-white/95 backdrop-blur-md px-4 py-2 rounded-full text-[9px] font-black uppercase tracking-widest text-kancah-dark shadow-sm">
+                    ${p.category}
+                </span>
             </div>
-        `).join('');
+        </div>
+        <div class="flex justify-between items-start border-b border-gray-100 pb-6 group-hover:border-kancah-blue transition-colors">
+            <div>
+                <h3 class="text-3xl sm:text-4xl font-bold mb-1 group-hover:text-kancah-blue transition-colors uppercase tracking-tighter leading-none italic">${p.title}</h3>
+                <p class="text-gray-400 font-bold text-[9px] uppercase tracking-[0.3em]">${p.category}</p>
+            </div>
+            <div class="w-12 h-12 sm:w-14 sm:h-14 rounded-full border border-gray-200 flex items-center justify-center group-hover:bg-kancah-blue group-hover:text-white group-hover:border-kancah-blue transition-all duration-500 shrink-0 transform group-hover:rotate-45">
+                <i class="fa-solid fa-arrow-right -rotate-45 text-lg"></i>
+            </div>
+        </div>
+    </div>
+`).join('');
 
         setTimeout(() => document.querySelectorAll('.work-item').forEach(el => el.classList.add('loaded')), 100);
     }
